# rouchdb

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  docker-compose.yml
.github/workflows/: docs.yml
crates/rouchdb/: Cargo.toml
crates/rouchdb-adapter-http/: Cargo.toml
crates/rouchdb-adapter-http/src/: auth.rs  lib.rs
crates/rouchdb-adapter-memory/: Cargo.toml
crates/rouchdb-adapter-memory/src/: lib.rs
crates/rouchdb-adapter-redb/: Cargo.toml
crates/rouchdb-adapter-redb/src/: lib.rs
crates/rouchdb-changes/: Cargo.toml
crates/rouchdb-changes/src/: lib.rs
crates/rouchdb-cli/: Cargo.toml
crates/rouchdb-cli/src/: main.rs
crates/rouchdb-cli/tests/: cli_tests.rs
crates/rouchdb-core/: Cargo.toml
crates/rouchdb-core/src/: adapter.rs  collation.rs  document.rs  rev_tree.rs
crates/rouchdb-query/: Cargo.toml
crates/rouchdb-query/src/: lib.rs  mango.rs  mapreduce.rs
crates/rouchdb-replication/: Cargo.toml
crates/rouchdb-replication/src/: checkpoint.rs  lib.rs  protocol.rs
crates/rouchdb-server/: Cargo.toml
crates/rouchdb-server/src/: error.rs  lib.rs  main.rs  state.rs
crates/rouchdb-server/src/routes/: active_tasks.rs  all_dbs.rs  all_docs.rs  attachment.rs  bulk.rs  changes.rs  compact.rs  database.rs  design.rs  document.rs  fauxton.rs  membership.rs  mod.rs  query.rs  root.rs  security.rs  session.rs  uuids.rs  views.rs
crates/rouchdb-views/: Cargo.toml
crates/rouchdb-views/src/: design_doc.rs  engine.rs  lib.rs
crates/rouchdb/examples/: quick.rs  quick_redb.rs
crates/rouchdb/src/: lib.rs
crates/rouchdb/tests/: bug_hunting.rs  couchdb_integration.rs  edge_cases.rs  mango_queries.rs  parity_changes.rs  parity_core.rs  parity_http.rs  parity_plugins.rs  parity_replication.rs  parity_views.rs  post_and_attachments.rs  replication.rs
docs/book/: book.toml
docs/book/src/: SUMMARY.md  introduction.md
docs/book/src/architecture/: overview.md  replication-protocol.md  revision-trees.md
docs/book/src/contributing/: crate-guide.md  setup.md  testing.md
docs/book/src/es/: inicio-rapido.md  introduccion.md
docs/book/src/es/guias/: replicacion.md
docs/book/src/getting-started/: concepts.md  installation.md
docs/book/src/guides/: adapters.md  attachments.md  changes-feed.md  crud.md  design-documents.md  partitions.md  plugins.md  replication.md
docs/book/src/reference/: adapter-trait.md  core-types.md  database-api.md
scripts/: download-fauxton.sh
