[workspace]
resolver = "3"
members = [
    "crates/rouchdb-core",
    "crates/rouchdb-adapter-memory",
    "crates/rouchdb-changes",
    "crates/rouchdb-adapter-redb",
    "crates/rouchdb-adapter-http",
    "crates/rouchdb-replication",
    "crates/rouchdb-query",
    "crates/rouchdb-views",
    "crates/rouchdb",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/RubyLabApp/rouchdb"
homepage = "https://github.com/RubyLabApp/rouchdb"
keywords = ["database", "couchdb", "pouchdb", "replication", "local-first"]
categories = ["database", "data-structures"]
