[workspace]
resolver = "3"
members = [
    "crates/rouchdb-core",
    "crates/rouchdb-adapter-memory",
    "crates/rouchdb-changes",
    "crates/rouchdb-adapter-redb",
    "crates/rouchdb-adapter-http",
    "crates/rouchdb-replication",
    "crates/rouchdb-query",
    "crates/rouchdb-views",
    "crates/rouchdb",
    "crates/rouchdb-server",
    "crates/rouchdb-cli",
]

[workspace.package]
version = "0.3.2"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/rubylab-app/rouchdb"
homepage = "https://github.com/rubylab-app/rouchdb"
keywords = ["database", "couchdb", "pouchdb", "replication", "local-first"]
categories = ["database", "data-structures"]
