[package]
name = "rouchdb-adapter-http"
description = "CouchDB HTTP client adapter for RouchDB"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
rouchdb-core = { path = "../rouchdb-core", version = "0.3.2" }
async-trait = "0.1"
percent-encoding = "2"
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
