[package]
name = "rouchdb-adapter-memory"
description = "In-memory storage adapter for RouchDB"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rouchdb-core = { path = "../rouchdb-core", version = "0.2.0" }
async-trait = "0.1"
base64 = "0.22"
md-5 = "0.10"
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
