[package]
name = "rouchdb-changes"
version = "0.1.0"
edition = "2024"

[dependencies]
rouchdb-core = { path = "../rouchdb-core" }
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "time"] }
tokio-stream = "0.1"

[dev-dependencies]
rouchdb-adapter-memory = { path = "../rouchdb-adapter-memory" }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
