[package]
name = "rouchdb-changes"
description = "Changes feed and live streaming for RouchDB"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
rouchdb-core = { path = "../rouchdb-core", version = "0.3.2" }
tokio = { version = "1", features = ["sync", "time", "macros", "rt"] }
tokio-util = "0.7"
serde_json = "1"

[dev-dependencies]
rouchdb-adapter-memory = { path = "../rouchdb-adapter-memory" }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
