[package]
name = "rouchdb-query"
version = "0.1.0"
edition = "2024"

[dependencies]
rouchdb-core = { path = "../rouchdb-core" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
rouchdb-adapter-memory = { path = "../rouchdb-adapter-memory" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
