[package]
name = "rouchdb-query"
description = "Mango query selectors and map/reduce views for RouchDB"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rouchdb-core = { path = "../rouchdb-core", version = "0.2.0" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
rouchdb-adapter-memory = { path = "../rouchdb-adapter-memory" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
