[package]
name = "rouchdb-replication"
version = "0.1.0"
edition = "2024"

[dependencies]
rouchdb-core = { path = "../rouchdb-core" }
rouchdb-changes = { path = "../rouchdb-changes" }
md-5 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
rouchdb-adapter-memory = { path = "../rouchdb-adapter-memory" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
