[package]
name = "rouchdb-replication"
description = "CouchDB replication protocol implementation for RouchDB"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rouchdb-core = { path = "../rouchdb-core", version = "0.1.1" }
rouchdb-changes = { path = "../rouchdb-changes", version = "0.1.1" }
md-5 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
rouchdb-adapter-memory = { path = "../rouchdb-adapter-memory" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
