[package]
name = "rouchdb-views"
description = "Design documents and persistent views for RouchDB"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
rouchdb-core = { path = "../rouchdb-core", version = "0.3.2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rouchdb-adapter-memory = { path = "../rouchdb-adapter-memory", version = "0.3.2" }
