[package]
name = "rouchdb"
description = "Local-first document database with CouchDB replication protocol support"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rouchdb-core = { path = "../rouchdb-core", version = "0.1.1" }
rouchdb-adapter-memory = { path = "../rouchdb-adapter-memory", version = "0.1.1" }
rouchdb-adapter-redb = { path = "../rouchdb-adapter-redb", version = "0.1.1" }
rouchdb-adapter-http = { path = "../rouchdb-adapter-http", version = "0.1.1" }
rouchdb-changes = { path = "../rouchdb-changes", version = "0.1.1" }
rouchdb-replication = { path = "../rouchdb-replication", version = "0.1.1" }
rouchdb-query = { path = "../rouchdb-query", version = "0.1.1" }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
reqwest = "0.12"
tempfile = "3"
